[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "askbot"
requires-python = ">=3.10"
dynamic = ["version"]
description = "Question and Answer forum, like StackOverflow, written in python and Django"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["forum", "community", "wiki", "Q&A"]
authors = [
    {name = "Evgeny.Fadeev", email = "evgeny.fadeev@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Finnish",
    "Natural Language :: German",
    "Natural Language :: Russian",
    "Natural Language :: Serbian",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Topic :: Communications :: Usenet News",
    "Topic :: Communications :: Email :: Mailing List Servers",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "aiohttp<4.0",
    "akismet==1.0.1",
    "beautifulsoup4<=4.7.1",
    "bleach==5.0.1",
    "celery==5.3.0",
    "django>=3.0,<5.0",
    "django-appconf==1.0.5",
    "django-avatar>=7.0",
    "django-compressor>=3.0,<=4.4",
    "django-countries>=3.3",
    "django-followit==0.7.0",
    "django-jinja>=2.0",
    "django-keyedcache3>=1.5.1",
    "django-livesettings3==1.6.3",
    "django-picklefield>=1.0.0,<=3.0.1",
    "django-recaptcha==3.0.0",
    "html5lib==1.1",
    "Jinja2>=2.10,<3.1",
    "jinja2-simple-tags==0.5.0",
    "jsonfield>=2.0.0",
    "linkify-it-py==2.0.2",
    "markdown-it-py==4.0.0",
    "markupsafe",
    "mdit-py-plugins==0.5.0",
    "mock==3.0.5",
    "oauth2<=1.9.0.post1",
    "okta-jwt-verifier==0.2.3",
    "premailer==3.10.0",
    "psycopg2-binary>=2.9.6",
    "pygments>=2.15.0",
    "pyjwt<=1.7.1",
    "python-cas>=1.4.0,<1.7",
    "python-openid2>=3.0",
    "regex",
    "requests-oauthlib>=1.2.0",
    "requirements-parser>=0.2.0",
    "responses>=0.9.0,<=0.23.1",
    "tldextract==5.1.2",
    "unidecode",
    "urllib3<1.27,>=1.21.1",
]

[project.scripts]
askbot-setup = "askbot.deployment:askbot_setup"

[project.urls]
Homepage = "http://askbot.org"
Repository = "https://github.com/ASKBOT/askbot-devel"

[tool.setuptools.dynamic]
version = {attr = "askbot.VERSION"}

[tool.setuptools.packages.find]
exclude = ["testproject*", "askbot_site*"]

[tool.ruff]
# exclude Django migrations
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
# add more rules
# see https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml
# "F" contains autoflake, see https://github.com/astral-sh/ruff/issues/1647
# These are all TODO, because they make so many changes.
# I put ** on some to do earlier.
select = [
    # default Ruff checkers as of ruff 0.1.3: E4, E7, E9, F
    # ** TODO: "E4",
    # ** TODO: "E7",
    # ** TODO: "E9",
    # ** TODO: "F",  # pyflakes

    # the rest in alphabetical order:
    # TODO: "A",   # flake8-builtins
    # TODO: "ARG", # flake8-unused-arguments
    # TODO: "B",   # flake8-bugbear
    # TODO: "BLE", # flake8-blind-except
    # TODO: Do I want "COM", # flake8-commas
    # TODO: "C4",  # flake8-comprehensions
    # ** TODO: "DJ",  # flake8-django
    # TODO: "DTZ", # flake8-datetimez
    # TODO: "EM",  # flake8-errmsg
    # ** TODO: "EXE", # flake8-executable
    # TODO: "FURB", # refurb
    # TODO: "FBT", # flake8-boolean-trap
    # TODO: "G",   # flake8-logging-format
    # ** TODO: "I",   # isort
    # TODO: "ICN", # flake8-import-conventions
    # TODO: "INP", # flake8-no-pep420
    # TODO: "INT", # flake8-gettext
    # TODO: "ISC", # flake8-implicit-str-concat
    # TODO: "LOG", # flake8-logging
    # TODO: "PERF", # perflint
    # TODO: "PIE", # flake8-pie
    # TODO: "PL",  # pylint
    # TODO: "PYI", # flake8-pyi
    # TODO: "RET", # flake8-return
    # TODO: "RSE", # flake8-raise
    # TODO: "RUF",
    # TODO: "SIM", # flake8-simplify
    # TODO: "SLF", # flake8-self
    # TODO: "SLOT", # flake8-slots
    # TODO: "TID", # flake8-tidy-imports
    # ** TODO: "UP",  # pyupgrade
    # ** TODO: "Q",   # flake8-quotes
    # TODO: "TCH", # flake8-type-checking
    # TODO: "T10", # flake8-debugger
    # ** TODO: "T20", # flake8-print
    # TODO: "S",   # flake8-bandit
    # TODO: "YTT", # flake8-2020
    # TODO: add more flake8 rules
]

# rules to ignore globally:
ignore = [
]

[tool.ruff.lint.extend-per-file-ignores]

# per-file ignores
#"**/migrations/*" = ["Q"]
#"**/management/commands/*" = ["T20"]
